--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +9,10 @@
     <link rel="stylesheet" href="./style.css"/>
     <title>YouTube Embedded Video Page</title>
   </head>
+
+
   <body>
+
     <header id="nav-bar">
       <img id="logo" src="index.jpg" alt="YouTube image" />
       <div id="searchView">
@@ -20,12 +25,14 @@
         <button type="submit"><i class="fas fa-search"></i></button>
       </div>
       <div id="rightNavView">
-        <button id="searchButton" type="submit"><i class="fas fa-bars"></i></button>
-        <button id="searchButton" type="submit"><i class="fas fa-ellipsis-v"></i></button>
-        <button id="searchButton" type="submit"><i class="fas fa-upload"></i></button>
+        <button type="submit"><i class="fas fa-bars"></i></button>
+        <button type="submit"><i class="fas fa-ellipsis-v"></i></button>
+        <button type="submit"><i class="fas fa-upload"></i></button>
       </div>
     </header>
-    <section id="content">
+
+
+    <main id="content">
       <div id="videoContainer">
         <iframe
           width="835"
@@ -35,7 +42,8 @@
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <div id="video-info">
+        
+        <div class="video-info">
           <p id="title">Contributing to Open Source Part I: The Easy Way</p>
           <div id="video-actions">
               <button type="submit"><i class="fas fa-thumbs-up"></i></button>
@@ -43,33 +51,37 @@
               <button type="submit"><i class="fas fa-share-square"></i></button>
           </div>
         </div>
-        <div id="video-info">
+
+        <div class="video-info">
             <p id="viewcount">50,875 views</p>
             <button id="subscribe" type="submit">SUBSCRIBE</button>
         </div>
+
         <div id="video-avatar">
             <img src="avatar.jpg" alt="YouTube image" />
             <p id="user">The Odin Project</p>
         </div>
       </div>
+
+
       <aside id="sidebar">
         <ul>
-          <li id="video-item">
-              <img id="logo" src="video1.jpg" alt="YouTube image" />
+          <li class="video-item">
+              <img class="video-thumb" src="video1.jpg" alt="YouTube image" />
               <div>
                 <p>How to create Custom Thumbnails</p>
                 <p>1000 views</p>
               </div>
           </li>
-          <li id="video-item">
-              <img id="logo" src="video2.jpg" alt="YouTube image" />
+          <li class="video-item">
+              <img class="video-thumb" src="video2.jpg" alt="YouTube image" />
               <div>
-                <p>Crazy Polic Car Chase</p>
+                <p>Crazy Police Car Chase</p>
                 <p>200k views</p>
               </div>
           </li>
-          <li id="video-item">
-              <img id="logo" src="video3.jpg" alt="YouTube image" />
+          <li class="video-item">
+              <img class="video-thumb" src="video3.jpg" alt="YouTube image" />
               <div>
                 <p>Vaping in 2019</p>
                 <p>10k views</p>
@@ -77,7 +89,7 @@
           </li>
         </ul>
       </aside>
-    </section>
+    </main>
     <script src="https://kit.fontawesome.com/2ed0af19bb.js"></script>
   </body>
 </html>
